--- a/public/css/crud.css
+++ b/public/css/crud.css
@@ -34,12 +34,17 @@
     justify-content: space-between;
     color: rgb(19, 225, 240)
 }
+
 .profile-img img {
     width: 40px;
     height: 40px;
     border-radius: 50%;
 }
 
+.profile-pic {
+    border-radius: 25%;
+    object-fit: cover;
+}
 .manage-category {
     height: 100%;
     padding-top: 30px;
