--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -128,7 +128,7 @@ footer {
 
 
 /* New resource card */
-.displayNew{
+.displayNew {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -137,7 +137,7 @@ footer {
 
 
 /* Previously saved resource card */
-.resource-item{
+.resource-item {
   background-image: url(../images/img.jpg);
   border-radius: 8px;
   border: 5px solid black;
@@ -147,15 +147,15 @@ footer {
   height: 30%;
 }
 
-.resourceInner{
+.resourceInner {
   border-radius: 5px;
   background-color: rgba(245, 245, 245, 0.6);
   margin: 5px;
   font-weight: 600;
 }
 
-.resourceInner h3{
- letter-spacing: 3px;
+.resourceInner h3 {
+  letter-spacing: 3px;
 }
 
 
@@ -174,7 +174,7 @@ footer {
 
 
 /* Search by #TagName and search box */
-.searchInLine{
+.searchInLine {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -191,7 +191,7 @@ footer {
 }
 
 #tagSearchInput {
-  width: 200px; 
+  width: 200px;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -206,15 +206,15 @@ footer {
   cursor: pointer;
 }
 
-#tagSearchButton:hover{
+#tagSearchButton:hover {
   background-color: whitesmoke
- }
- 
-   #tagSearchButton:active {
-     background-color: aqua;
-     box-shadow: 0 5px #666;
-     transform: translateX(4px);
-   }
+}
+
+#tagSearchButton:active {
+  background-color: aqua;
+  box-shadow: 0 5px #666;
+  transform: translateX(4px);
+}
 
 
 
@@ -224,25 +224,25 @@ h1 {
   text-align: center;
 }
 
-h3{
+h3 {
   letter-spacing: 10px;
   text-decoration: underline;
 }
 
 
-h5{
+h5 {
   letter-spacing: 5px;
 }
 
 
-.title{
+.title {
   width: 75%;
   margin: 7% 12% 3%;
 
 }
 
 
-.resources-app{
+.resources-app {
   width: 50%;
   height: auto;
   margin: 0px 25%;
@@ -253,9 +253,9 @@ h5{
 
 
 /* Fancy RESOURCES title...maybe */
-.grid{
+.grid {
   margin-top: 4%;
- 
+
 }
 
 .stroke {
@@ -278,6 +278,7 @@ h5{
 .halftone {
   position: relative;
 }
+
 .halftone:after {
   content: "RESOURCES";
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAHElEQVQYV2NUVFT8f//+fUYGBgYGMAEDcA5IBQCKJQVmn76DhAAAAABJRU5ErkJggg==") repeat;
@@ -309,6 +310,7 @@ h5{
 .fancy {
   position: relative;
   white-space: nowrap;
+
   &:after {
     --deco-height: 0.3125em;
     content: "";
@@ -324,18 +326,18 @@ h5{
   }
 }
 
-.buttonS{
+.buttonS {
   display: flex;
   justify-content: center;
 }
 
 
-.Sbtn{
+.Sbtn {
   text-decoration: none;
 }
 
 /* Big Winner button! */
-.Sbtn:hover{
+.Sbtn:hover {
   transform: scale(1.8);
   width: 20%;
 }
@@ -388,11 +390,11 @@ main img:hover {
   font-variation-settings: "wght";
   color: aqua;
   text-align: center;
-  text-shadow: 4px 4px  #2d4848;
+  text-shadow: 4px 4px #2d4848;
 }
 
 .addLink h1:hover {
-  font-variation-settings: "wght" 582; 
+  font-variation-settings: "wght" 582;
   letter-spacing: 2px;
 }
 
@@ -421,10 +423,10 @@ main img:hover {
   flex-wrap: nowrap;
   gap: 10px;
   white-space: nowrap;
-  overflow-x: auto; 
+  overflow-x: auto;
 }
 
-.tag-button{
+.tag-button {
   height: 60%;
   align-items: center;
   background-color: rgb(203, 255, 255);
@@ -433,7 +435,9 @@ main img:hover {
   transition: 0.3s;
 }
 
-.tag-button:hover {opacity: 1}
+.tag-button:hover {
+  opacity: 1
+}
 
 
 
@@ -443,18 +447,19 @@ main img:hover {
 
 
 
-@media screen and (max-width: 1300px) {
-  .subtitle h1{
+@media screen and (min-width: 951px) {
+  .subtitle h1 {
     font-size: xx-large;
   }
 
   h2 {
     font-size: x-large;
-   }
+  }
 
-    h4{
+  h4 {
     font-size: large;
   }
+
   .center {
     margin: 4%;
   }
@@ -463,34 +468,35 @@ main img:hover {
 
 
 @media screen and (max-width: 950px) {
-  .subtitle h1{
+  .subtitle h1 {
     font-size: x-large;
   }
 
   .searchFor h3 {
     font-size: 30px;
     letter-spacing: 5px;
-   }
+  }
 
-   .searchFor h3 {
+  .searchFor h3 {
     font-size: xx-large;
     letter-spacing: 7px;
-   }
-   
-   #tagSearchInput {
-    width: 175px;
-     height: 45px;
-   }
-   
-   #tagSearchButton {
-     font-size: 15px; 
-   }
+  }
 
-   h2, h4{
+  #tagSearchInput {
+    width: 175px;
+    height: 45px;
+  }
+
+  #tagSearchButton {
+    font-size: 15px;
+  }
+
+  h2,
+  h4 {
     font-size: larger;
   }
-  
-  
+
+
   main img {
     width: 150px;
     height: 150px;
@@ -507,13 +513,13 @@ main img:hover {
 
 
 @media screen and (max-width: 820px) {
- 
-  .resources-app{
+
+  .resources-app {
     width: 75%;
     margin: 50px 15%;
   }
 
-  .title h1{
+  .title h1 {
     margin: 15% 10% 0%;
     font-size: 35px;
   }
@@ -523,51 +529,52 @@ main img:hover {
   } */
 
 
-  h1{
-  font-size: 35px;
+  h1 {
+    font-size: 35px;
   }
 
-  .subtitle h1{
+  .subtitle h1 {
     font-size: large;
   }
 
 
-.searchFor h3 {
- font-size: x-large;
- letter-spacing: 3px;
-}
+  .searchFor h3 {
+    font-size: x-large;
+    letter-spacing: 3px;
+  }
 
-#tagSearchInput {
- width: 150px;
-  height: 35px;
-}
+  #tagSearchInput {
+    width: 150px;
+    height: 35px;
+  }
 
-#tagSearchButton {
-  font-size: 15px; 
-}
+  #tagSearchButton {
+    font-size: 15px;
+  }
 
-.tagButtonContainer {
-  margin: 0px 7%;
-}
+  .tagButtonContainer {
+    margin: 0px 7%;
+  }
 
-.tag-button{
-  font-size: 14px;
-}
+  .tag-button {
+    font-size: 14px;
+  }
 
-h2, h4{
-  font-size: large;
-}
+  h2,
+  h4 {
+    font-size: large;
+  }
 
 
-main img {
-  width: 130px;
-  height: 130px;
-}
+  main img {
+    width: 130px;
+    height: 130px;
+  }
 
-.addLink h1 {
-  width: 120%;
-  font-size: 70px;
-}
+  .addLink h1 {
+    width: 120%;
+    font-size: 70px;
+  }
 
 }
 
@@ -577,7 +584,7 @@ main img {
 
 
 @media screen and (max-width: 600px) {
-  .subtitle h1{
+  .subtitle h1 {
     font-size: medium;
   }
 
@@ -585,26 +592,26 @@ main img {
     font-size: 23px;
     letter-spacing: 2px;
     margin-right: 5px;
-   }
-   
-   #tagSearchInput {
+  }
+
+  #tagSearchInput {
     width: 125px;
-     height: 35px;
-   }
-   
-   #tagSearchButton {
-     font-size: 15px; 
-   }
+    height: 35px;
+  }
 
-   h2 {
-    font-size: small;
-   }
+  #tagSearchButton {
+    font-size: 15px;
+  }
 
-    h4{
+  h2 {
     font-size: small;
   }
-  
-  
+
+  h4 {
+    font-size: small;
+  }
+
+
   main img {
     width: 110px;
     height: 120px;
@@ -618,25 +625,25 @@ main img {
 
 
 @media screen and (max-width: 480px) {
-  .subtitle h1{
+  .subtitle h1 {
     font-size: x-small;
   }
 
   .searchFor h3 {
     font-size: small;
     letter-spacing: 2px;
-   }
-   
-   #tagSearchInput {
-    width: 100px;
-     height: 35px;
-   }
-   
-   #tagSearchButton {
-     font-size: 15px; 
-   }
+  }
 
-   main img {
+  #tagSearchInput {
+    width: 100px;
+    height: 35px;
+  }
+
+  #tagSearchButton {
+    font-size: 15px;
+  }
+
+  main img {
     width: 120px;
     height: 120px;
   }
@@ -645,27 +652,27 @@ main img {
 
 
 @media screen and (max-width: 380px) {
-  .subtitle h1{
+  .subtitle h1 {
     font-size: x-small;
   }
 
   .searchFor h3 {
     font-size: 18px;
     letter-spacing: 1px;
-   }
-   
-   #tagSearchInput {
-    width: 80px;
-     height: 25px;
-   }
-   
-   #tagSearchButton {
-     font-size: 12px; 
-   }
+  }
 
-   .tag-button{
+  #tagSearchInput {
+    width: 80px;
+    height: 25px;
+  }
+
+  #tagSearchButton {
+    font-size: 12px;
+  }
+
+  .tag-button {
     font-size: 10px;
   }
-  
+
 
 }
