--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -4,13 +4,18 @@
 
 
 
+
+
 .nav-links {
   list-style-type: none;
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   padding: 0;
-  margin: 0;
+  margin: 0 10%;
   gap: 20px;
-  margin-left: 50%;
+
 
 }
 
@@ -202,7 +207,7 @@ footer {
   position: sticky;
   top: 0;
   padding: 5px;
-  z-index: 1000;
+  z-index: 500;
 }
 
 
@@ -445,7 +450,7 @@ main img:hover {
   display: flex;
   justify-content: center;
   flex-wrap: nowrap;
-  margin: 0px 10%;
+  margin: 0px 15%;
 }
 
 
@@ -456,6 +461,8 @@ main img:hover {
   gap: 10px;
   white-space: nowrap;
   overflow-x: auto; 
+  -webkit-overflow-scrolling: touch; /* For older WebKit browsers */
+  border: 1px solid #000;
 }
 
 .tag-button{
@@ -552,10 +559,6 @@ main img:hover {
     font-size: 35px;
   }
 
-  /* .res{
-    font-size: 80px;
-  } */
-
 
   h1{
   font-size: 35px;
@@ -603,6 +606,21 @@ main img {
   font-size: 70px;
 }
 
+.footerNav ul {
+    display: flex;
+  flex-direction: column;
+  flex-wrap:  nowrap;
+  align-items: center;
+  margin-top: 20px;
+  
+}
+
+.social {
+  margin: 0 52%;
+}
+
+
+
 }
 
 
@@ -648,6 +666,12 @@ main img {
     width: 100%;
     font-size: 50px;
   }
+
+  .container{
+    display: flex;
+  flex-direction: row;
+  width: 500px;
+  }
 }
 
 
@@ -674,6 +698,17 @@ main img {
     width: 120px;
     height: 120px;
   }
+
+  .container{
+    display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;  
+  }
+
+  .menu {
+    margin-top: 20px;
+  }
+
 }
 
 
@@ -702,4 +737,66 @@ main img {
   }
   
 
+}
+
+
+
+
+
+/* Nav Bar drop down menu */
+
+.overlay {
+  height: 0%;
+  width: 100%;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+  overflow-y: hidden;
+  transition: 0.5s;
+}
+
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+
+
+
+
+
+@media screen and (max-height: 450px) {
+  .overlay {overflow-y: auto;}
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+  font-size: 40px;
+  top: 15px;
+  right: 35px;
+  }
 }
