--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -4,11 +4,14 @@
 
 .nav-links {
     list-style-type: none;
-    display: flex;
-    padding: 0;
-    margin: 0;
-    gap: 20px;
-    margin-left: 40%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding: 0;
+  margin: 0 10%;
+  gap: 20px;
+
 
 }
 
@@ -405,8 +408,89 @@ display:flex;
 }
 
 
-@media (min-width: 1200px) {
+/* @media (min-width: 1200px) {
     .container {
         max-width: 1500px;
     }
-}
+} */
+
+
+
+
+/* Nav Bar drop down menu */
+
+.overlay {
+    height: 0%;
+    width: 100%;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9);
+    overflow-y: hidden;
+    transition: 0.5s;
+  }
+  
+  .overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+  }
+  
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+  
+  
+  @media screen and (max-width: 600px) {
+    .container{
+        display: flex;
+      flex-direction: row;
+      width: 500px;
+      }
+  }
+
+
+
+  @media screen and (max-width: 480px) {
+    .container{
+        display: flex;
+      flex-direction: column-reverse;
+      justify-content: space-between;  
+      }
+    
+      .menu {
+        margin-top: 20px;
+      }
+  }
+  
+  
+  
+  @media screen and (max-height: 450px) {
+    .overlay {overflow-y: auto;}
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+    }
+  }
