updating nav bar

--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -806,3 +806,18 @@ margin: 0 52%;
   right: 35px;
   }
 }
+
+
+
+
+
+/*********************************/
+/* STANLEY PAGE */
+
+.videos{
+  margin: 50px 15%;
+}
+
+p {
+  text-align: center;
+}
