updated responsiveness for each page

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -102,7 +102,7 @@ footer {
     text-decoration: none;
     padding: 10px;
     background-color: white;
-    margin: 5px;
+    margin: 5px 7px;
     border-radius: 30%;
 }
 
@@ -244,7 +244,7 @@ display:flex;
 }
 
 .videos-container h1 {
-
+ text-align: center;
     padding: 10px;
 }
 
@@ -253,14 +253,24 @@ display:flex;
     width: 300px;
     border: 1px solid #ccc;
     padding: 10px;
-    margin: 10px;
+    margin: 15px;
     box-shadow: 0 0 10px rgba(7, 167, 241, 0.5);
 }
 
 .fetched-videos {
     display: flex;
-
+    flex-wrap: wrap;
+    justify-content: center;
 }
+
+
+.TeamMember-shortBio h1{
+    text-align: center;
+    letter-spacing: 2px;
+    text-shadow: 2px 2px #818181;
+    margin-bottom: 3%;
+}
+
 
 .about-developers {
     display: flex;
@@ -298,6 +308,7 @@ display:flex;
 
 .flex-container {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: 10px;
     padding-bottom: 40px;
@@ -313,6 +324,8 @@ display:flex;
 
 
 }
+
+
 
 .stanley-quote h3 {
     text-align: center;
@@ -456,6 +469,9 @@ display:flex;
     font-size: 60px;
   }
   
+
+
+  
   @media screen and (max-width: 820px) {
     .footerNav ul {
         display: flex;
@@ -467,7 +483,7 @@ display:flex;
       }
       
       .social {
-      margin: 0 52%;
+      margin: 0 55%;
       }
   }
 
