--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -877,13 +877,26 @@ margin: 0 55%;
 /*********************************/
 /* STANLEY PAGE */
 
+.background{
+  background-image: url(../images/stanbackground.jpg);
+}
+
+.background h1{
+  font-size: 80px;
+  color: whitesmoke;
+  padding-top: 30px;
+  text-shadow: 2px 2px  aqua;
+}
+
 .videos{
   margin: 50px 33%;
 }
 
 .under {
+  font-size: 30px;
   text-align: center;
   margin: 0 5%;
+  color: whitesmoke;
 }
 
 
@@ -916,20 +929,47 @@ td:hover{
 }
 
 
+.accordion-button {
+  letter-spacing: 4px;
+ 
+}
+
+@media screen and (max-width: 1100px){
+  .under {
+    font-size: 28px;
+    margin: 0 18%;
+  }
+}
+
 
 
 @media screen and (max-width: 850px){
 .videos{
   margin: 50px 25%;
 }
+.background h1{
+  font-size: 70px;
+}
 
+.under {
+  font-size: 28px;
+  margin: 0 18%;
+}
+
+}
+
+
+@media screen and (max-width: 600px){
+  .background h1{
+    font-size: 55px;
+  }
 }
 
 
 
 @media screen and (max-width: 450px){
   table {
-    width: 125%;
+    width: 115%;
     margin: 0 auto;
     transform: translateX(-20px);
   }
@@ -938,4 +978,16 @@ td:hover{
     margin: 50px 15%;
   }
 
+  .background h1{
+    font-size: 40px;
+    margin: 0 2%;
+    padding-bottom: 10px;
 }
+
+.under {
+  font-size: 20px;
+  margin: 0 10%;
+}
+
+}
+
