debuggin and making pages responsive

--- a/public/css/forgotPassword.css
+++ b/public/css/forgotPassword.css
@@ -18,20 +18,32 @@
   .wrapper{
 
    width: 100%;
-   height: 100vh;
-   padding: 15px;
+   height: 70vh;
    display: flex;
    justify-content: center;
    align-items: center;
 }
+
+
+
+nav{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+nav img{
+    width: 175px;
+    height: 75px;
+    margin-bottom: 20px;
+}
 .nav-links {
     list-style-type: none;
     display: flex;
-    padding: 0;
-    margin: 0;
     gap: 20px;
-    margin-left: 50%;
-  } 
+
+  }  
+
   .nav-links li {
     margin: 0;
   }
@@ -41,6 +53,12 @@
     justify-content: space-between;
     color:  #3ca1b0;
   }
+
+  .nav-links li a:hover {
+    color:  aqua;
+  }
+
+
 
 
 .title-section {
