--- a/public/css/forgotPassword.css
+++ b/public/css/forgotPassword.css
@@ -15,14 +15,6 @@
         background-repeat: no-repeat;
         background-size: cover;
     }
-  .wrapper{
-
-   width: 100%;
-   height: 70vh;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
 
 
 
@@ -30,6 +22,9 @@ nav{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    margin-bottom: 40%; 
+    margin-top: 1%
 }
 
 nav img{
@@ -44,9 +39,6 @@ nav img{
 
   }  
 
-  .nav-links li {
-    margin: 0;
-  }
   
   .nav-links li a {
     text-decoration: none;
@@ -133,3 +125,4 @@ nav img{
 .submit-btn:hover{
     opacity: 0.95;
 }
+
