--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -463,7 +463,8 @@ display:flex;
 
 .modal-close-button {
     
-    width:60px;
+    width:70px;
+    height: 40px;
     border-radius: 4px;
     background-color: aqua;
     color:black;
@@ -471,6 +472,7 @@ display:flex;
     
     
 }
+
 
 .modal-comment-button {
     width:130px;
@@ -481,8 +483,11 @@ display:flex;
 }
 
 .modal-button button {
+    margin: 10px 3px;
+    height: 40px;
     padding-top: 2px;
     float:right;
+    font-size: x-small;
 }
 
 
