--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -12,18 +12,9 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  padding: 0;
-  margin: 0 10%;
-  gap: 20px;
-
-
+  letter-spacing: 3px;
 }
 
-
-.nav-links li {
-  margin: 0;
-
-}
 
 .nav-links a:hover {
   text-decoration: underline;
@@ -33,7 +24,6 @@
 
 .nav-links li a {
   text-decoration: none;
-  justify-content: space-between;
   color: rgb(19, 225, 240)
 }
 
