--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -207,7 +207,29 @@ footer p{
 }
 
 .resourceInner p{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-self: center;
+  width: 75%;
   letter-spacing: -1px;
+}
+
+.resourceInner a{
+  display: flex;
+  flex-wrap: wrap;
+  letter-spacing: -2px;
+  text-decoration: none;
+  text-align: center;
+  color: black;
+  font-size: 95%;
+}
+
+
+.resourceInner a:hover{
+  text-decoration: underline;
+  color: rgb(21, 115, 115);
+  transform: scale(0.85); 
 }
 
 
