updated big winner button

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -656,6 +656,11 @@ display:flex;
         font-size: large;
     
     }
+
+
+    .modal-button button {
+        font-size: small;
+    }
     
   }
   
